Level loading from file
Game now loads an arbitrary level from a file, fills in collision data
(although this is a bit spotty in 1x1 corridors).

--- a/OpenGLT1/OpenGLT1/OpenGLT1.vcxproj.filters
+++ b/OpenGLT1/OpenGLT1/OpenGLT1.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="TexManager.cpp">
       <Filter>Source Files\Managers</Filter>
     </ClCompile>
+    <ClCompile Include="Map.cpp">
+      <Filter>Source Files\Objects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenGLSys.h">
@@ -88,6 +91,9 @@
     </ClInclude>
     <ClInclude Include="TexManager.h">
       <Filter>Header Files\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="Map.h">
+      <Filter>Header Files\Objects</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
