--- a/OpenGLT1/OpenGLT1/OpenGLT1.vcxproj
+++ b/OpenGLT1/OpenGLT1/OpenGLT1.vcxproj
@@ -101,6 +101,7 @@
     <ClCompile Include="IntroState.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainMenuState.cpp" />
+    <ClCompile Include="Map.cpp" />
     <ClCompile Include="OpenGLSys.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="StateEngine.cpp" />
@@ -111,6 +112,7 @@
     <ClInclude Include="GameState.h" />
     <ClInclude Include="IntroState.h" />
     <ClInclude Include="MainMenuState.h" />
+    <ClInclude Include="Map.h" />
     <ClInclude Include="OpenGLSys.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="StateEngine.h" />
