--- a/OpenGLT1/OpenGLT1/OpenGLT1.vcxproj.filters
+++ b/OpenGLT1/OpenGLT1/OpenGLT1.vcxproj.filters
@@ -37,6 +37,12 @@
     <Filter Include="Source Files\File Loaders">
       <UniqueIdentifier>{0b8fbfc1-658f-4c9e-a303-ba86e00257cf}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Wrappers">
+      <UniqueIdentifier>{8ea0dbfd-082a-4f81-9172-6a931ed6ccbf}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Wrappers">
+      <UniqueIdentifier>{ac139408-aaae-42d2-b00f-6ee9e8ea86be}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -66,6 +72,12 @@
     <ClCompile Include="Map.cpp">
       <Filter>Source Files\Objects</Filter>
     </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>Source Files\Objects</Filter>
+    </ClCompile>
+    <ClCompile Include="W32Console.cpp">
+      <Filter>Source Files\Wrappers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenGLSys.h">
@@ -94,6 +106,12 @@
     </ClInclude>
     <ClInclude Include="Map.h">
       <Filter>Header Files\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Header Files\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="W32Console.h">
+      <Filter>Header Files\Wrappers</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
