--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,8 @@ local.properties
 *.tli
 *.tlh
 *.tmp
+*.opendb
+*.opensdf
 *.vspscc
 .builds
 **/*.dotCover
@@ -163,3 +165,4 @@ pip-log.txt
 
 # Mac crap
 .DS_Store
+*.db
